# Il2CppMetaForge

./: .gitignore  AGENTS.md  Il2CppMetaForge.sln  README.md  REPORTS.md
Il2CppMetaForge/: CMakeLists.txt  Il2CppMetaForge.vcxproj  Il2CppMetaForge.vcxproj.filters  build.bat  build.sh  config.txt
Il2CppMetaForge/include/: Il2CppMetadataStructs.h  Il2CppMetadataStructs.md  MemoryReader.h  MetadataBuilder.h
Il2CppMetaForge/src/: MemoryReader.cpp  MemoryReader.md  MetadataBuilder.cpp  MetadataBuilder.md  main.cpp  main.md
x64/Release/: Run.bat
